--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -8,8 +8,8 @@
 # jekyll configuration file for Shotgun Developer Site Environment
 
 # Site settings
-title: Shotgun Developer
-description: Resources for Shotgun developers.
+title: Shotgun Ecosystem
+description: Resources for Shotgun Developers.
 
 # Build settings
 markdown: kramdown
@@ -25,7 +25,7 @@ plugins:
   - jekyll-polyglot
 
 
-# i18n configuration
+# i18n configuration for all languages shotgun supports
 languages: ["en", "ko", "ja", "zh_CN"]
 lang_vars: ["English", "한국어", "日本語", "简体中文"]
 default_lang: "en"
@@ -33,7 +33,7 @@ exclude_from_localization: ["javascript", "css"]
 parallel_localization: true
 
 permalink: pretty
-exclude: []
+exclude: ["tk-doc-generator"]
 
 # Enable or disable the site search
 search_enabled: true
