--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
   global:
     - DOC_URL=https://developer.shotgunsoftware.com
     - DOC_PATH=/tk-doc-generator
+    - S3_BUCKET = "doctest3"
+    - S3_WEB_URL = "http://doctest3.s3-website.eu-west-2.amazonaws.com"
 
 cache:
   pip: true
