Changed site name to SG Developer

--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -8,7 +8,7 @@
 # jekyll configuration file for Shotgun Developer Site Environment
 
 # Site settings
-title: Shotgun Ecosystem
+title: SG Developer
 description: Resources for Shotgun Developers.
 
 # Build settings
