--- a/docs/_data/landing_page.yaml
+++ b/docs/_data/landing_page.yaml
@@ -7,7 +7,7 @@ image: ./images/sg_doc_logo.png
 enable_search: false
 
 # main headline blurb
-content: This repository makes it easy to generate documentation for Shotgun Ecosystem and Toolkit related repositories.
+content: This repository makes it easy to generate developer documentation for Shotgun Ecosystem and Toolkit related repositories.
 
 # different tiles to be displayed below headline blurb
 tiles:
