--- a/docs/_data/landing_page.yml
+++ b/docs/_data/landing_page.yml
@@ -1,7 +1,7 @@
 # This file holds data for the landing_page custom layout found in _layouts/landing_page.html
 
 # main logo image
-image: ./images/sg_doc_logo.png
+image: ./images/landing-page/sg_doc_logo.png
 
 # main headline blurb
 content: This repository makes it easy to generate developer documentation for Shotgun Ecosystem and Toolkit related repositories.
@@ -9,9 +9,9 @@ content: This repository makes it easy to generate developer documentation for S
 # different tiles to be displayed below headline blurb
 tiles:
 - name: integrating
-  image: ./images/dev_icon.png
+  image: ./images/landing-page/dev_icon.png
   target: ./integrating
 
 - name: authoring
-  image: ./images/book_icon.png
+  image: ./images/landing-page/book_icon.png
   target: ./authoring
