--- a/docs/_data/en/toc_text.yml
+++ b/docs/_data/en/toc_text.yml
@@ -4,6 +4,6 @@
 #
 
 authoring: Authoring docs
-markdown-cheatsheet: Markdown Cheat Sheet
+markdown-cheatsheet: Markdown Cheatsheet
 setting-up: Installation
 developing: Developing tk-doc-generator
