--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -1,16 +1,31 @@
-# Table of contents
+# This file holds the table of contents for the site
+#
+# For documentation, see https://developer.shotgunsoftware.com/tk-doc-generator/authoring/toc/
+#
+#
 
 - caption: authoring
   children:
   - page: /authoring/
-  - text: theme-info
-    url: https://pmarsceill.github.io/just-the-docs/
+  - page: /authoring/markdown/
+    children:
+    - text: markdown-cheatsheet
+      url: https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet
+  - page: /authoring/figures/
+  - page: /authoring/toc/
+    children:
+    - page: /authoring/toc/file-structure/
+  - page: /authoring/landing-page/
+  - page: /authoring/preview/
 
 - caption: setting-up
   children:
-  - page: /integrating/
-  - page: /integrating/tech_details/
+  - page: /installation/integrating/
+  - page: /installation/languages/
 
+- caption: developing
+  children:
+  - page: /developing/tech-details/
 
 
 
