--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -15,6 +15,8 @@
   - page: /authoring/toc/
     children:
     - page: /authoring/toc/file-structure/
+      children:
+      - page: /authoring/toc/file-structure/nesting/
   - page: /authoring/landing-page/
   - page: /authoring/preview/
 
