--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -26,7 +26,7 @@ plugins:
   - jekyll-polyglot
   # analytics
   - jekyll-analytics
-
+  - jekyll-redirect-from
 
 # default i18n configuration
 languages: ["en"]
