Add plugin to generate UID permalinks for pages.

--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -44,5 +44,4 @@ exclude: ["tk-doc-generator"]
 #    id: UA-123-456          # Required - replace with your tracking id
 #    anonymizeIp: false      # Optional - Default: false - set to true for anonymized tracking
 
-
-
+permalink: /:uid/
