Update documentation to reflect changes in page authoring and URL generation.

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -19,6 +19,7 @@
       - page: toc-nesting
   - page: authoring-landing-page
   - page: authoring-preview
+  - page: authoring-page-urls
 
 - caption: setting-up
   children:
