--- a/docs/_data/en/toc_text.yml
+++ b/docs/_data/en/toc_text.yml
@@ -1,8 +1,9 @@
 # Translated text strings used by the table of contents
-# 
+#
 # For documentation, see https://developer.shotgunsoftware.com/tk-doc-generator/authoring/toc/
 #
 
+overview: Overview
 authoring: Authoring docs
 markdown-cheatsheet: Markdown Format
 setting-up: Installation
