Spelling fix, testing build

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script:
   - python ./travis-generate-docs.py
 
 deploy:
-  # When commiting to master, auto-deploy to github-pages
+  # When committing to master, auto-deploy to github-pages
   # This will copy the contents of the _build folder to gh-pages branch and push
 - provider: pages
   local-dir: ./_build
@@ -53,4 +53,4 @@ deploy:
   github-token: $GITHUB_TOKEN
   on:
     # only do this when on the master branch
-    branch: master
+    branch: fix-build-docs-rwX-yum-clean-all
