--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,10 @@ python:
 
 env:
   global:
-    - DOC_URL=https://wwfxuk.github.io
+    - DOC_URL=https://developer.shotgunsoftware.com
     - DOC_PATH=/tk-doc-generator
+    - S3_BUCKET=sg-devdocs
+    - S3_WEB_URL=http://sg-devdocs.s3-website-us-east-1.amazonaws.com
 
 cache:
   pip: true
