Try using urllib3 1.25.3, which should be compatible with requests.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,5 @@ ruamel.yaml==0.15.83
 # working around travis issue
 # Could not import extension sphinx.builders.linkcheck (exception: No module named ordered_dict)
 # see see https://github.com/ystia/yorc/pull/178
-urllib3[secure]==1.23
+# (Updated this to 1.25.3, which includes security fixes, but is compatible with requests.)
+urllib3[secure]==1.25.3
