Enable strict_front_matter, forcing an error on malformed front matter.

--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -60,3 +60,8 @@ exclude: ["tk-doc-generator"]
 # Default permalinks will use the generated UID.  For pages where the UID
 # should not be used, permalink can be set in the page slug.
 permalink: /:uid/
+
+# Jekyll should generate a build error rather than continue silently if there is
+# an error in the front matter. This will ensure that CI fails for incorrectly
+# structured front matter and that we don't silently omit pages.
+strict_front_matter: true
