--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
     - DOC_URL=https://developer.shotgunsoftware.com
     - DOC_PATH=/tk-doc-generator
     - S3_BUCKET=sg-devdocs
-    - S3_WEB_URL=http://sg-devdocs.s3-website-us-east-1.amazonaws.com
+    - S3_WEB_URL=http://sg-devdocs.ems.autodesk.com
 
 cache:
   pip: true
