--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Install Pandoc
         run: sudo apt-get install -y pandoc
       - name: Install Jekyll dependencies
-        run: bundle install --gemfile=./tk-doc-generator/Gemfile --deployment
+        run: bundle install --deployment
       - name: Install tk-doc-generator requirements
-        run: pip install -r ./tk-doc-generator/requirements.txt
+        run: pip install -r ./requirements.txt
       - name: Generate HTML
         env:
           AWS_S3_ACCESS_KEY: ${{ secrets.AWS_S3_ACCESS_KEY }}
