--- a/.github/workflows/generate-preview.yml
+++ b/.github/workflows/generate-preview.yml
@@ -30,4 +30,4 @@ jobs:
           DOC_URL: https://developer.shotgridsoftware.com
           DOC_PATH: /tk-doc-generator
           PR_NUMBER: ${{ github.event.number }}
-        run: python ./tk-doc-generator/actions-generate-docs.py
+        run: python ./actions-generate-docs.py
