--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ git+https://github.com/manneohrstrom/sphinx-markdown-builder@master#egg=sphinx-m
 boto3==1.9.71
 ruamel.yaml==0.15.83
 PySide2==5.15.1
+pyyaml==6.0
 
 # working around travis issue
 # Could not import extension sphinx.builders.linkcheck (exception: No module named ordered_dict)
