Updated remaining URL pointers to old domain

--- a/docs/_data/en/landing_page_text.yml
+++ b/docs/_data/en/landing_page_text.yml
@@ -1,6 +1,6 @@
 # This file holds translated text strings for the site landing page. 
 # 
-# For documentation, see https://developer.shotgunsoftware.com/tk-doc-generator/authoring/landing-page/
+# For documentation, see https://developer.shotgridsoftware.com/tk-doc-generator/authoring/landing-page/
 #
 
 title: This repository makes it easy to generate developer documentation for Shotgun Ecosystem and Toolkit related repositories.
