--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -1,6 +1,6 @@
 # This file holds the table of contents for the site
 #
-# For documentation, see https://developer.shotgunsoftware.com/tk-doc-generator/authoring/toc/
+# For documentation, see https://developer.shotgridsoftware.com/tk-doc-generator/authoring/toc/
 #
 #
 
