--- a/docs/_data/landing_page.yml
+++ b/docs/_data/landing_page.yml
@@ -1,13 +1,13 @@
 # This file holds data for the site landing page.
 # 
-# For documentation, see https://developer.shotgunsoftware.com/tk-doc-generator/authoring/landing-page/
+# For documentation, see https://developer.shotgridsoftware.com/tk-doc-generator/authoring/landing-page/
 #
 
 # main logo image
 image: ./images/landing-page/sg_doc_logo.png
 
 # main headline blurb
-content: This repository makes it easy to generate developer documentation for Shotgun Ecosystem and Toolkit related repositories.
+content: This repository makes it easy to generate developer documentation for ShotGrid Ecosystem and Toolkit related repositories.
 
 # different tiles to be displayed below headline blurb
 tiles:
