--- a/.github/workflows/generate-preview.yml
+++ b/.github/workflows/generate-preview.yml
@@ -33,7 +33,7 @@ jobs:
           AWS_S3_ACCESS_TOKEN: ${{ secrets.AWS_S3_ACCESS_TOKEN }}
           TK_GITHUB_TOKEN: ${{ secrets.TK_GITHUB_TOKEN }}
           S3_BUCKET: sg-devdocs
-          S3_WEB_URL: http://sg-devdocs.s3-website-us-east-1.amazonaws.com
+          S3_WEB_URL: http://sg-devdocs.ems.autodesk.com
           DOC_URL: https://developer.shotgridsoftware.com
           DOC_PATH: /tk-doc-generator
           PR_NUMBER: ${{ github.event.number }}
